@@ -6,10 +6,13 @@
 // To build a distribution zip:
 // ./gradlew distZip
 
+
+
 plugins {
     id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.beryx.jlink' version '2.21.1'
 }
 
 sourceCompatibility = 11
@@ -74,4 +77,22 @@ run {
 
 run {
     standardInput = System.in
+}
+
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+
+        jvmArgs = [
+                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons"
+        ]
+    }
+
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+    }
 }
